Update [GET] /tests and delete [GET] /tests/{testId}
