# apim/apis-functions-swagger.yaml
@@ -34,64 +34,10 @@ paths:
                         type: string
                       testName:
                         type: string
+                      length:
+                        type: integer
         "401":
           description: アクセスが拒否されました
-          content:
-            application/json:
-              schema:
-                type: string
-        "500":
-          description: サーバー処理が異常終了しました
-          content:
-            application/json:
-              schema:
-                type: string
-  /tests/{testId}:
-    get:
-      summary: テスト取得API
-      description: 指定したテストIDでのテストの詳細情報を取得します
-      operationId: tests-testid
-      parameters:
-        - name: testId
-          in: path
-          description: testId
-          required: true
-          schema:
-            type: string
-        - name: X-Access-Token
-          in: header
-          description: Microsoft ID Platformから発行されたアクセストークン
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: サーバー処理が正常終了しました
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  courseName:
-                    type: string
-                  testName:
-                    type: string
-                  length:
-                    type: integer
-        "400":
-          description: リクエストパラメーターが不正です
-          content:
-            application/json:
-              schema:
-                type: string
-        "401":
-          description: アクセスが拒否されました
-          content:
-            application/json:
-              schema:
-                type: string
-        "404":
-          description: 指定したテストが存在しません
           content:
             application/json:
               schema:
